--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Railsblog</title>
+    <title>Rails Blog</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico?v2" />
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico" />
     <%= favicon_link_tag 'favicon.ico' %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
   <body>
+    <section class="hero is-link is-small">
+      <!-- Hero head: will stick at the top -->
+      <div class="hero-head">
+        <nav class="navbar">
+          <div class="container">
+            <div class="navbar-brand"><svg xmlns="http://www.w3.org/2000/svg" height="65" width="35" viewBox="0 0 60 40"><title>savings</title><g class="nc-icon-wrapper"><path d="M24,35a1,1,0,0,1-1-1,12.987,12.987,0,0,1,21.58-9.751,1,1,0,0,1,.089,1.411,1.068,1.068,0,0,1-.089.089,12.949,12.949,0,0,1-16.456.577A10.967,10.967,0,0,0,25,34,1,1,0,0,1,24,35Z" fill="#38a838"></path><path d="M24,35a1,1,0,0,1-1-1,10.968,10.968,0,0,0-3.124-7.672A12.949,12.949,0,0,1,3.42,25.751a1,1,0,0,1-.089-1.411,1.068,1.068,0,0,1,.089-.089A12.987,12.987,0,0,1,25,34,1,1,0,0,1,24,35Z" fill="#49c549"></path><circle cx="24" cy="11" r="11" fill="#ffd764"></circle><path d="M24,20a9,9,0,1,1,9-9A9,9,0,0,1,24,20Z" fill="#f7bf26"></path><path d="M24,18a7,7,0,1,1,7-7A7,7,0,0,1,24,18Z" fill="#ffd764"></path><path d="M24,15a1,1,0,0,1-.707-.293l-3-3a1,1,0,0,1,0-1.414l3-3a1,1,0,0,1,1.414,0l3,3a1,1,0,0,1,0,1.414l-3,3A1,1,0,0,1,24,15Z" fill="#f7bf26"></path><path d="M32,48H16a1,1,0,0,1-.986-.836l-2-12A1,1,0,0,1,14,34H34a1,1,0,0,1,.986,1.164l-2,12A1,1,0,0,1,32,48Z" fill="#a2703f"></path><polygon points="13.486 38 34.514 38 34.847 36 13.153 36 13.486 38" fill="#d0ab86"></polygon></g></svg>
+              <%= link_to 'Demo Blog', root_path, class: "navbar-item has-text-weight-bold px-1"%>
+              <span class="navbar-burger" data-target="navbarMenuHeroA">
+                <span></span>
+                <span></span>
+                <span></span>
+              </span>
+            </div>
+            <div id="navbarMenuHeroA" class="navbar-menu">
+              <div class="navbar-end">
+                <%= link_to "Create New Post", new_post_path, class: "navbar-item"%>
+              </div>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <!-- Hero content: will be in the middle -->
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h1 class="title">
+            WHAT'S ON YOUR MIND?
+            <%= yield :page_title %>
+          </h1>
+          <h2 class="subtitle">
+            A Blog For Your Thoughts
+          </h2>
+        </div>
+      </div>
+      <!-- Hero footer: will stick at the bottom -->
+      <div class="hero-foot">
+        <nav class="tabs">
+          <div class="container">
+            <ul>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </section>
     <%= yield %>
   </body>
 </html>
