Added editing functionality using partials :)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <section class="hero is-link is-small">
+    <section class="hero is-danger is-small">
       <!-- Hero head: will stick at the top -->
       <div class="hero-head">
         <nav class="navbar">
@@ -37,7 +37,6 @@
       <div class="hero-body">
         <div class="container has-text-centered">
           <h1 class="title">
-            WHAT'S ON YOUR MIND?
             <%= yield :page_title %>
           </h1>
           <h2 class="subtitle">
