--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="title">Blog Index</h1>
+<% content_for :page_title, "What's On Your Mind?" %>
 <section class="section">
   <div class="container">
     <% @posts.each do |post| %>
