Resolved destroy action issue using status param and turbo for delete method

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,7 @@
           <%= link_to "Edit", edit_post_path(@post), class: "button" %>
         </p>
         <p class="level-item">
-          <%= link_to "Delete", edit_post_path(@post), class: "button is-danger" %>
+          <%= link_to "Delete", post_path(@post), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "button is-danger" %>
         </p>
       </div>
     </nav>
